BetterMotherFuckingWebsite avec pop-up

--- a/BetterMotherFuckingWebsite.html
+++ b/BetterMotherFuckingWebsite.html
@@ -13,14 +13,34 @@
 			<div class="message">
 				<p>"Hey le site xxxvidsxxx est trop bien. Viens dessus stp please" </p>
 			</div>
+			<div class="img-xx">
+				<img src="images/xxvideo.jpg">
+			</div>
 			<div class="choix">
-				<div class="choix-oui"><a href="" id="oui">Oui?</a></div>
-				<div class="choix-non"><a href="" id="non">Non?</a></div>
+				<div id="choix-oui"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="oui">Oui?</a></div>
+				<div id="choix-non"><p id="non">Non?</p></div>
 			</div>
 		</div>
 	</div>
 	
 	<!-- Fin du pop-up  -->
+
+	<!-- les boutons qui vont changer la couleur -->
+	<div class="bouton-changer">
+		<div id="back-magenta"class="left">
+			<span>le font en Magenta</span>
+		</div>
+		<div id="police-bleu" class="left">
+			<span>police en bleu</span>
+		</div>
+		<div id="police-header-green" class="left">
+			<span>Police header en vert</span>
+		</div>
+		<div id="changement-police" class="left">
+			<span>Changement police</span>
+		</div>
+	</div>
+	<!-- Fin -->
 	<div class="content">
 		<header>
 			<h1>This is <em>still</em> a motherfucking website.</h1>
